Agregué unas preguntas

--- a/Clases/Latex/Cuestionario.tex
+++ b/Clases/Latex/Cuestionario.tex
@@ -50,5 +50,14 @@
 		\item ¿Cómo expresas una variable con 3 decimales?\\Con $\%$.3f
 		\item ¿Cómo expresas una variable de la forma más corta posible?\\Con $\%$g
 		\item ¿Cómo expresas el valor de una variable en una cadena?\\Con $\%$s
+		\item ¿Qué son las palabras reservadas?\\Son aquellas que tienen un significado exclusivo dentro del lenguaje de programación.
+		\item ¿Cuáles son las palabras reservadas de Python vistas en clase?
+		\begin{enumerate}
+			\item print
+			\item import
+			\item def
+			\item return
+		\end{enumerate}
+		\item ¿Cómo sacas una raíz cuadrada en Python?\\Importas en módulo math, después con math.sqrt y pones el número entre paréntesis.
 	\end{enumerate}
 \end{document}
