Pasé a Latex la bitácora 6 y la Tarea 3 la pasé al shell de python, e hicimos un ejercicio con la funcion raiz que creamos

--- a/Clases/Latex/Clase05.tex
+++ b/Clases/Latex/Clase05.tex
@@ -11,7 +11,7 @@
 \begin{document}
 	\maketitle
 	\newpage
-	\title{Clase V\\Bitácora\\}
+	\title{Clase V. Bitácora\\}
 	\text{Los temas vistos en la quinta clase fueron:}
 	\begin{enumerate}
 		\item Cosas vistas en Python:
