Pasé la bitácora 7 a Latex

--- a/Clases/Latex/Ejercicio2.tex
+++ b/Clases/Latex/Ejercicio2.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \usepackage{enumitem} %poder ocupar los paquetes para enlistar
 \usepackage[utf8]{inputenc}%carácteres especiales del español (acentos)
-%\graphicspath{{/home/thc/Imágenes}}
+\graphicspath{{/home/thc/Imagenes}}
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{Valeria Ortiz Cervantes}
