--- a/Clases/Latex/Ejercicio2.tex
+++ b/Clases/Latex/Ejercicio2.tex
@@ -31,4 +31,21 @@ $\sqrt{2} + \sqrt{3^2}^2$ \\
 
 $\int_{a}^{b} x^2 dx$ \\ 
 $\int_{a}^{b} x^2 \partial$
+\section*{Matrices}
+%dots puntos suspensivos
+%vdots puntos suspensivos verticales 
+\[
+\begin{bmatrix}
+	x_{2} & x_{3}\\
+	x_{4} & x_{7}
+\end{bmatrix}
+\]
+\[ %en una sola línea
+\begin{bmatrix}
+x_{2} & x_{5} & \dots\\
+x_{5} & x_{20} & \ddots\\
+\vdots & \vdots & \vdots
+\end{bmatrix}
+\]
+$\sum$
 \end{document}
