--- a/Clases/Latex/Clase07.tex
+++ b/Clases/Latex/Clase07.tex
@@ -2,9 +2,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{enumitem} %poder ocupar los paquetes para enlistar
-\usepackage[utf8]{inputenc}%carácteres especiales del español (acentos)
-%\graphicspath{{/home/thc/Imágenes}}
+\usepackage{enumitem} 
+\usepackage[utf8]{inputenc}
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{Valeria Ortiz Cervantes}
