Agregué los Problemas que me faltaban de la Tarea 4 y la bitácora 9

--- a/Clases/Latex/Ejercicio3.tex
+++ b/Clases/Latex/Ejercicio3.tex
@@ -1,8 +1,8 @@
 \documentclass{book}
-\usepackage[spanish]{babel} 
+%\usepackage[spanish]{babel} 
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref} %paquete para enlazar cosas y poner links 
-\usepackage{biblatex} %paquete para bibliografía
+%\usepackage{biblatex} %paquete para bibliografía
 
 \title{Taller de Herramientas Computacionales}
 \author{Valeria Ortíz Cervantes}
@@ -53,8 +53,8 @@
 	print s (16.5)
 \end{verbatim}
 
-\input{/home/thc/thc/Clases/Latex/Prueba.py}\\
-\input{Prueba.py}
+%\input{/home/thc/thc/Clases/Latex/Prueba.py}\\
+%\input{Prueba.py}
 
 %Aquí inician los capítulos del libro
 \chapter{Introducción a Latex}
