--- a/Clases/Latex/Ejercicio2.tex
+++ b/Clases/Latex/Ejercicio2.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{enumitem} %poder ocupar los paquetes para enlistar
+%\usepackage{enumitem} poder ocupar los paquetes para enlistar
 \usepackage[utf8]{inputenc}%carácteres especiales del español (acentos)
 \graphicspath{{/home/thc/Imagenes}}
 
@@ -12,9 +12,9 @@
 
 \begin{document}
 	\maketitle
-\begin{center}
-	\includegraphics[scale=0.50]{/home/thc/Imagenes/1.png}
-\end{center}
+%\begin{center}
+%	\includegraphics[scale=0.50]{/home/thc/Imagenes/1.png}
+%\end{center}
 \newpage
 \section*{Expresiones Matemáticas}
 $\alpha +  \beta$\\ %los signos de pesitos son para escribir expresiones matemáticas
@@ -48,4 +48,23 @@ x_{5} & x_{20} & \ddots\\
 \end{bmatrix}
 \]
 $\sum$
+
+\section*{Tablas}
+\[
+\begin{array}{|c|c|c|}
+\hline
+f(t) & F(S) & \mbox{Remark}\\
+\hline \hline
+\delta(t) & 1 & \mbox{impulse function}\\
+u(t) & \frac{1}{s} & \mbox{unit step function}\\
+e^{at}u(t) & \frac{1}{s-a} & \mbox{one-side exponential}\\
+\hline
+\end{array}
+\]
+
+\section*{Alineamiento}
+\begin{align*}
+	2x - 5y &= 8 \\
+	2 - 9y &= -12
+\end{align*}
 \end{document}
