Agregué las dos últimas bitácoras porque cuando hice la 9 mi máquina se apagó antes de que la guardara y la tuve que volver a hacer, y el cuestionario de la semana pasada.

--- a/Clases/Latex/Clase07.tex
+++ b/Clases/Latex/Clase07.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{enumitem} 
+%\usepackage{enumitem} 
 \usepackage[utf8]{inputenc}
 
 \title{\Huge Taller de Herramientas Computacionales}
@@ -31,10 +31,10 @@
 			\item Cómo escribir expresiones matemáticas:\\(Los signos de pesitos se usan para indicar que es una expresión matemática.)
 			\begin{enumerate}
 				\item Letras griegas.\\Para poner una letra se escribe su nombre en inglés.
-				\item Subíndices y superíndices(exponentes).\\Para el subíndice se usa un guión bajo y para el super índice el gorrito; y en ambos casos el número va entre llaves.
+				\item Subíndices y superíndices (exponentes).\\Para el subíndice se usa un guión bajo y para el super índice el gorrito; y en ambos casos el número va entre llaves.
 				\item Fracciones.\\Pones frac y ambos números entre llaves diferentes.
 				\item Raíz cuadrada.\\Pones sqrt, como en Python, y el número entre llaves.
-				\item Integrales definidas.\\Pones int seguido de un guion bajo y pones entre llaves los numeritos separados por un gorrito, al lado la función y el dx
+				\item Integrales definidas.\\Pones int seguido de un guión bajo y pones entre llaves los numeritos separados por un gorrito, al lado la función y el dx.
 			\end{enumerate}
 			\item Los corchetes se usan para centrar algo en una sola línea.
 		\end{enumerate}
