--- a/Clases/Latex/Clase08.tex
+++ b/Clases/Latex/Clase08.tex
@@ -23,10 +23,10 @@
 		    \item ; :finalizador de instrucción.
 		    \item type : para saber la clase de un objeto.
 		    \item Primeras dos líneas en cada archivo:
-		    %\begin{enumerate}
+		    \begin{verbatim}
 		    	%\item $#!/usr/bin/python2.7$
 		    	%\item $# -*- coding: utf-8 -*-$
-		    %\end{enumerate}
+		    \end{verbatim}
 		\end{enumerate}
 		\item Comandos: 
 		\begin{enumerate}
