--- a/Clases/Latex/Ejercicio3.tex
+++ b/Clases/Latex/Ejercicio3.tex
@@ -1,8 +1,8 @@
 \documentclass{book}
-%\usepackage[spanish]{babel} 
+\usepackage[spanish]{babel} 
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref} %paquete para enlazar cosas y poner links 
-%\usepackage{biblatex} %paquete para bibliografía
+\usepackage{biblatex} %paquete para bibliografía
 
 \title{Taller de Herramientas Computacionales}
 \author{Valeria Ortíz Cervantes}
@@ -62,7 +62,7 @@
 \section*{Orientación a objetos}
 
 \begin{thebibliography}{9}
-	%\bibitem{Computación}
+	\bibitem{Computación}
 	Autor 
 	\textit{algo}
 	kwejfn 2019
