--- a/Clases/Latex/Cuestionario.tex
+++ b/Clases/Latex/Cuestionario.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{xcolor}
-\usepackage{enumitem}
+%\usepackage{enumitem}
 \usepackage[utf8]{inputenc}
 \title{\Huge Taller de Herramientas Computacionales}
 \author{Valeria Ortiz Cervantes}
