--- a/Clases/Latex/Clase02.tex
+++ b/Clases/Latex/Clase02.tex
@@ -1,4 +1,4 @@
-%\documentclass{article}
+\documentclass{article}
 \documentclass[letterpaper, 12pt, oneside]{article} %para dar formato al documento
 \usepackage{amsmath}
 \usepackage{graphicx}
