Subí la bitácora 12 y los dos cuestionarios, los cambios en la bitácora 11 y el cuestionario 1 solo fueron espacios que agregué

--- a/Clases/Latex/Clase11.tex
+++ b/Clases/Latex/Clase11.tex
@@ -13,7 +13,7 @@
 	\maketitle
 	\begin{center}
 		\subsection*{Universidad Nacional Autónoma de México.\\Facultad de Ciencias.\\}
-		%\includegraphics[scale=3]{/1.jpg}
+		\includegraphics[scale=3]{/1.jpg}
 	\end{center}
 	\newpage
 	\subsection*{Clase XI. Bitácora\\}
