Agregué algunos archivos de Latex de los problemas

--- a/Clases/Latex/Problema3.tex
+++ b/Clases/Latex/Problema3.tex
@@ -7,7 +7,7 @@
 \renewcommand*\ttdefault{cmvtt}
 \renewcommand*\familydefault{ttdefault}
 \usepackage[T1]{fontenc}
-
+\usepackage{hyperref}%para poner links
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{\huge Valeria Ortiz Cervantes}
@@ -20,10 +20,11 @@
 	\includegraphics[scale=3]{/1.jpg}
 \end{center}
 \newpage
-\title{\LARGE Segundo Problema de las Tareas 4 y 5.}
+\title{\LARGE Tercer Problema de las Tareas 4 y 5.}
 \section*{\large Tarea 4}
-	Lo primero que hice fue despejar el tiempo de la función que teníamos del movimiento de la pelota, con el ejemplo que habíamos visto anteriormente, usé la fórmula general para funciones cuadráticas y de ahí me salió la función para obtener ambos tiempos.\\	
-	Después definí dos funciones para cada uno de los tiempos, para que funcionara bien con el script que quería hacer.
+En esta función lo que hice fue que primero debes meter si lo que quieres convertir son grados Celsius o Farenheit, escrito en una cadena, junto con el número de grados. Ya en el script preguntaba el tipo de grados y después cuántos grados son.\\
+La investigación que realicé fue buscar las fórmulas para convertir los grados, esta fue la página de donde lo saqué: 
+\url https://www.saberespractico.com/ciencia/como-pasar-de-grados-celsius-a-farenheit-y-viceversa/	
 \section*{\large Tarea 5}
-	En esta parte, en lo que está comentado fue una función que traté de hacer que tenía la velocidad, la altura y una tupla con ambos tiempos, pero no me salió, así que mejor lo cambié e hice una función que me daba una lista con ambos tiempos y después otra función que me mostraba esos tiempos como una tabla.
+Aquí hice dos funciones, una que te daba una lista con los valores de los grados centígrados para convertir, en la entrada tenías que dar el inicio, el final y subintervalos para la lista. Usando eso te regresaba otra lista con los grados convertidos.
 \end{document}
