--- a/Clases/Programas/PythonFacil/Problema1Pf.tex
+++ b/Clases/Programas/PythonFacil/Problema1Pf.tex
@@ -7,7 +7,7 @@
 \renewcommand*\ttdefault{cmvtt}
 \renewcommand*\familydefault{ttdefault}
 \usepackage[T1]{fontenc}
-
+\usepackage{hyperref}%para poner links
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{\huge Valeria Ortiz Cervantes}
@@ -20,10 +20,6 @@
 	\includegraphics[scale=3]{/1.jpg}
 \end{center}
 \newpage
-\title{\LARGE Segundo Problema de las Tareas 4 y 5.}
-\section*{\large Tarea 4}
-	Lo primero que hice fue despejar el tiempo de la función que teníamos del movimiento de la pelota, con el ejemplo que habíamos visto anteriormente, usé la fórmula general para funciones cuadráticas y de ahí me salió la función para obtener ambos tiempos.\\	
-	Después definí dos funciones para cada uno de los tiempos, para que funcionara bien con el script que quería hacer.
-\section*{\large Tarea 5}
-	En esta parte, en lo que está comentado fue una función que traté de hacer que tenía la velocidad, la altura y una tupla con ambos tiempos, pero no me salió, así que mejor lo cambié e hice una función que me daba una lista con ambos tiempos y después otra función que me mostraba esos tiempos como una tabla.
+\title{\LARGE Primer Problema de Python fácil.\\}
+Para este problema hice lo que nos enseñó el profesor para resolver para resolver un problema, lo definí y después usé ejemplos pequeños para ir creando la función entorno a ellos, resultó muy bien, primero lo escribí en papel, después lo pasé a python y me salió bien a la primera, creo que lo único que me falló fue que no había puesto lo de range(len()).
 \end{document}
