--- a/Clases/Programas/PythonFacil/Problema3Pf.tex
+++ b/Clases/Programas/PythonFacil/Problema3Pf.tex
@@ -7,7 +7,7 @@
 \renewcommand*\ttdefault{cmvtt}
 \renewcommand*\familydefault{ttdefault}
 \usepackage[T1]{fontenc}
-
+\usepackage{hyperref}%para poner links
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{\huge Valeria Ortiz Cervantes}
@@ -20,10 +20,6 @@
 	\includegraphics[scale=3]{/1.jpg}
 \end{center}
 \newpage
-\title{\LARGE Segundo Problema de las Tareas 4 y 5.}
-\section*{\large Tarea 4}
-	Lo primero que hice fue despejar el tiempo de la función que teníamos del movimiento de la pelota, con el ejemplo que habíamos visto anteriormente, usé la fórmula general para funciones cuadráticas y de ahí me salió la función para obtener ambos tiempos.\\	
-	Después definí dos funciones para cada uno de los tiempos, para que funcionara bien con el script que quería hacer.
-\section*{\large Tarea 5}
-	En esta parte, en lo que está comentado fue una función que traté de hacer que tenía la velocidad, la altura y una tupla con ambos tiempos, pero no me salió, así que mejor lo cambié e hice una función que me daba una lista con ambos tiempos y después otra función que me mostraba esos tiempos como una tabla.
+\title{\LARGE Tercer Problema de Python fácil.\\}
+Bueno, resulta que este problema ya lo había resuelto para la Tarea 4, puse que fueran divisibles entre los números del 2 al 10, no puse el 1 pues todos los números son divisibles entre 1, creo que el único problema que tuve fue que al meter los valores de 3,5,7 y 9 me salía que era compuesto cuando no lo son, así que solo agregué otro caso para definir que no lo eran.
 \end{document}
