--- a/Clases/Programas/PythonFacil/Problema4Pf.tex
+++ b/Clases/Programas/PythonFacil/Problema4Pf.tex
@@ -7,7 +7,7 @@
 \renewcommand*\ttdefault{cmvtt}
 \renewcommand*\familydefault{ttdefault}
 \usepackage[T1]{fontenc}
-
+\usepackage{hyperref}%para poner links
 
 \title{\Huge Taller de Herramientas Computacionales}
 \author{\huge Valeria Ortiz Cervantes}
@@ -20,10 +20,7 @@
 	\includegraphics[scale=3]{/1.jpg}
 \end{center}
 \newpage
-\title{\LARGE Segundo Problema de las Tareas 4 y 5.}
-\section*{\large Tarea 4}
-	Lo primero que hice fue despejar el tiempo de la función que teníamos del movimiento de la pelota, con el ejemplo que habíamos visto anteriormente, usé la fórmula general para funciones cuadráticas y de ahí me salió la función para obtener ambos tiempos.\\	
-	Después definí dos funciones para cada uno de los tiempos, para que funcionara bien con el script que quería hacer.
-\section*{\large Tarea 5}
-	En esta parte, en lo que está comentado fue una función que traté de hacer que tenía la velocidad, la altura y una tupla con ambos tiempos, pero no me salió, así que mejor lo cambié e hice una función que me daba una lista con ambos tiempos y después otra función que me mostraba esos tiempos como una tabla.
+\title{\LARGE Cuarto Problema de Python fácil.\\}
+Aquí utilicé el ejemplo que habíamos visto de la lista infinita pues lo que nos daba eran todos los números enteros  a partir del 1, ya que el múltiplo de un número es otro número que contiene a ese mismo número cierta cantidad de veces.\\
+Después sólo definí otra función que nos diera los múltiplos, que es el número que metes y solo lo multiplicas por cada número de la función anterior.
 \end{document}
