Agregué más archivos de Latex

--- a/Clases/Latex/Problema7Pf.tex
+++ b/Clases/Latex/Problema7Pf.tex
@@ -18,7 +18,7 @@
 	\includegraphics[scale=3]{/1.jpg}
 \end{center}
 \newpage
-\title{\LARGE Cuarto Problema de Python fácil.\\}
-Aquí utilicé el ejemplo que habíamos visto de la lista infinita pues lo que nos daba eran todos los números enteros  a partir del 1, ya que el múltiplo de un número es otro número que contiene a ese mismo número cierta cantidad de veces.\\
-Después sólo definí otra función que nos diera los múltiplos, que es el número que metes y solo lo multiplicas por cada número de la función anterior.
+\title{\LARGE Séptimo Problema de Python fácil.\\}
+Lo primero que hice fue probar la función para ver que hacía, después puse en una cadena lo que pedía el problema y redefiní la función para que tuviera menos líneas.\\
+Después hice el script con la parte interactiva de la función nueva que yo hice usando la anterior.
 \end{document}
